--- a/cdx_vietnam/config/locales/models/concerns.vi.yml
+++ b/cdx_vietnam/config/locales/models/concerns.vi.yml
@@ -3,23 +3,23 @@ vi:
     concerns:
       resource:
         institution_option: 'Tổ chức'
-        site_option:  'Trang web'
+        site_option:  'Cơ sở'
         device_option: 'Thiết bị'
         deviceModel_option: 'Kiểu thiết bị'
         testResult_option: 'Kết quả xét nghiệm'
-        encounter_option: 'Cuộc gặp'
+        encounter_option: 'Yêu cấu xét nghiệm'
         role_option: 'Vai trò'
         user_option: 'Người dùng'
         patient_option: 'Bệnh nhân'
         alert_option: 'Thông báo'
-        pageHeader_option: 'Tiêu đề trang'
-        settingsPage_option: 'Cài đặt trang'
+        pageHeader_option: 'Tiêu đề'
+        settingsPage_option: 'Trang cài đặt'
         resource_not_found: 'Tài nguyên không được tìm thấy:'
       entity:
-        belong_to_institution: 'phải thuộc về tổ chức giống như'
-        belong_to_encounter: 'phải thuộc về cuộc gặp giống như'
-        belong_to_patient: 'phải thuộc về bệnh nhân giống như'
-        is_not_supported: 'không được hỗ trợ cho các thực thể'
+        belong_to_institution: 'phải thuộc về cùng 1 tổ chức như thế này'
+        belong_to_encounter: 'phải thuộc về cùng 1 yêu cầu xét nghiệm như thế này'
+        belong_to_patient: 'phải thuộc về cùng 1 bệnh nhân như thế này'
+        is_not_supported: 'không được hỗ trợ cho đối tượng'
         is_marked_as: 'được đánh dấu là'
         sensitive: 'nhạy'
       site_contained:
