--- a/cdx_vietnam/config/locales/models/csv_message_parser.vi.yml
+++ b/cdx_vietnam/config/locales/models/csv_message_parser.vi.yml
@@ -1,4 +1,4 @@
 vi:
   models: 
     csv_message_parser:
-      path_nesting: 'path nesting không hỗ trợ cho tin nhắn CSV'
+      path_nesting: 'Đường dẫn lưu không hỗ trợ cho tin nhắn CSV'
