--- a/cdx_vietnam/config/locales/models/culture_result.vi.yml
+++ b/cdx_vietnam/config/locales/models/culture_result.vi.yml
@@ -5,8 +5,8 @@ vi:
         result_status: 'Trạng thái'
         sample_collected_at: 'Ngày lấy mẫu'
         examined_by: 'Kiểm tra bởi'
-        result_at: 'Kết quả ngày'
-        media_used: 'Phương tiện truyền thông sử dụng'
+        result_at: 'Ngày xuất kết quả'
+        media_used: 'Phương tiện được sử dụng'
         serial_number: 'Số seri phòng thí nghiệm'
         sample_identifier_id: 'Mã số mẫu'
-        feedback_message_id: 'Phản hồi'
+        feedback_message_id: 'Thông báo phản hồi'
