--- a/cdx_vietnam/config/locales/models/device_message_importer.vi.yml
+++ b/cdx_vietnam/config/locales/models/device_message_importer.vi.yml
@@ -1,12 +1,12 @@
 vi:
   device_message_importer:
-    running_import_for: 'Đang chạy nhập dữ liệu cho'
-    with_pattern: 'với mô hình'
-    saved_device_message: 'Tin nhắn thiết bị đã lưu'
+    running_import_for: 'Đang nhập dữ liệu cho'
+    with_pattern: 'với mẫu'
+    saved_device_message: 'Thông báo từ thiết bị đã được lưu'
     for_device: 'cho thiết bị'
-    parsing_failed: 'Phân tách tin nhắn thiết bị đã thất bại'
-    error_processing_device: 'Lỗi xử lý tin nhắn thiết bị'
-    processed_device: 'Tin nhắn thiết bị đã xử lý'
-    importing: 'Đang nhập dữ liệu'
+    parsing_failed: 'Phân tách thông báo thiết bị đã thất bại'
+    error_processing_device: 'Lỗi xử lý thông báo từ thiết bị'
+    processed_device: 'Thông báo từ thiết bị đã được xử lý'
+    importing: 'Đang nhập liệu'
     error_processing: 'Lỗi xử lý'
     with_encoding: 'với mã hóa'
