--- a/cdx_vietnam/config/locales/models/test_result.vi.yml
+++ b/cdx_vietnam/config/locales/models/test_result.vi.yml
@@ -1,4 +1,4 @@
 vi:
   models:
     test_result:
-      match: "phải phù hợp với mẫu thử của bệnh nhân"
+      match: "phải trùng khớp với bệnh nhân của mẫu xét nghiệm"
