--- a/cdx_vietnam/config/locales/models/xpert_result.vi.yml
+++ b/cdx_vietnam/config/locales/models/xpert_result.vi.yml
@@ -5,9 +5,9 @@ vi:
         result_status: 'Trạng thái'
         sample_collected_at: 'Ngày lấy mẫu'
         examined_by: 'Kiểm tra bởi'
-        result_at: 'Kết quả ngày'
-        rifampicin: 'Kháng sinh'
-        trace: 'Dấu vết'
-        tuberculosis: 'Vi khuẩn lao'
+        result_at: 'Ngày trả kết quả'
+        rifampicin: 'Kháng Rif'
+        trace: 'Mức độ'
+        tuberculosis: 'Phát hiện vi khuẩn lao'
         sample_identifier_id: 'Mã số mẫu'
-        feedback_message_id: 'Phản hồi'
+        feedback_message_id: 'Thông báo phản hồi'
