--- a/cdx_vietnam/config/locales/views/alert_mailer.vi.yml
+++ b/cdx_vietnam/config/locales/views/alert_mailer.vi.yml
@@ -1,7 +1,7 @@
 vi:
   alert_mailer:
     alert_email:
-      h1: 'Thông báo sự cố cho'
-      msg: 'Lúc'
-      email_text: 'Cảnh báo xảy ra'
+      h1: 'Thông báo cho'
+      msg: 'Thông báo lúc'
+      email_text: 'Cảnh báo đã xảy ra'
       time_occured: 'Thời gian xảy ra'
