--- a/cdx_vietnam/config/locales/views/js_components.vi.yml
+++ b/cdx_vietnam/config/locales/views/js_components.vi.yml
@@ -114,26 +114,26 @@
       col_name: "Tên thiết bị"
       col_manufacturer: "Nhà sản xuất"
       col_model: "Kiểu"
-      col_site: "Trang"
+      col_site: "Cơ sở"
 
     encounters:
       btn_comment: 'Nhận xét'
       btn_save: "Lưu mã phòng thí nghiệm"
-      lbl_tests_requested: "Những kiểm tra được yêu cầu"
-      lbl_microscopy: "Kính hiển vi"
+      lbl_tests_requested: "Những xét nghiệm được yêu cầu"
+      lbl_microscopy: "Soi kính trực tiếp"
       lbl_xpert_mtb: "Xpert MTB/RIF"
       lbl_culture: "Nuôi cấy"
-      lbl_liquid_culture: "Môi trường lỏng"
-      lbl_solid_culture: "Môi trường rắn"
-      lbl_drug_first_line: "Khả năng kháng thuốc dòng một"
-      lbl_drug_second_line: "Khả năng kháng thuốc dòng hai"
-      lbl_line_first_line: "Dò khảo nghiệm dòng 1"
-      lbl_line_second_line: "Dò khảo nghiệm dòng 2"
+      lbl_liquid_culture: "Nuôi cấy lỏng"
+      lbl_solid_culture: "Nuôi cấy đặc"
+      lbl_drug_first_line: "Kháng sinh đồ hàng một"
+      lbl_drug_second_line: "Kháng sinh đồ hàng hai"
+      lbl_line_first_line: "Kỹ thuật LPA hàng 1"
+      lbl_line_second_line: "Kỹ thuật LPA hàng 2"
       lbl_cd4_count: "Đếm tế bào CD4"
-      lbl_viral_count: "Lượt tải Viral"
-      lbl_hiv_detect: " Phát hiện HIV 1/2"
-      lbl_rdt: "RDT"
-      lbl_xpert_ebola: "Xpert Ebola"
+      lbl_viral_count: "Tải lượng virus"
+      lbl_hiv_detect: " Phát hiện virus HIV type 1/2"
+      lbl_rdt: "Kit chẩn đoán nhanh"
+      lbl_xpert_ebola: "Kỹ thuật Xpert chẩn đoán virus Ebola"
 
     episodes:
       lbl_treatment_outcome: "Kết quả điều trị"
@@ -174,16 +174,16 @@
         col_request_by: "Yêu cầu bởi"
         col_request_to: "Yêu cầu cho"
         col_order_id: "Mã yêu cầu"
-        col_batch_id: "Mã loạt"
+        col_batch_id: "Mã bộ yêu cầu"
         col_order_by: "Yêu cầu bởi"
         col_request_date: "Ngày yêu cầu"
         col_due_date: "Ngày hết hạn"
-        col_time: "Thời gian quay vòng"
+        col_time: "Thời gian trả kết quả"
         col_status: "Trạng thái"
 
         episodes:
-          lst_open: "Tập mở"
-          lst_close: "Tập đóng"
+          lst_open: "Tạo lần khám"
+          lst_close: "Kết thúc lần khám"
           lbl_diagnosis: "Chẩn đoán"
           lbl_hiv_status: "Tình trạng nhiễm HIV"
           lbl_history: "Lịch sử"
@@ -191,8 +191,8 @@
           lbl_outcome: "Kết quả"
           lbl_diagnosis_by_site: "Chẩn đoán phân loại bởi trang giải phẫu"
           btn_edit: "Chỉnh sửa tập"
-          msg_loading: "Đang tải tập..."
-          msg_no_episode: "Không có tập."
+          msg_loading: "Đang tải lần khám..."
+          msg_no_episode: "Không có lần khám."
 
         history:
           col_comment_date: "Ngày"
@@ -251,8 +251,8 @@
       col_number: "Số seri"
       col_exam_by: "Kiểm tra bởi"
       col_media_used: "Phương tiện sử dụng"
-      col_test_result: "Kết quả kiểm tra"
-      col_result_at: "Kết quả ngày"
+      col_test_result: "Kết quả xét nghiệm"
+      col_result_at: "Ngày trả kết quả"
       col_h: "Kết quả H"
       col_r: "Kết quả R"
       col_e: "Kết quả E"
@@ -262,11 +262,11 @@
       col_cm: "Kết quả Cm"
       col_fq: "Kết quả Fq"
       col_on: "Kết quả ở"
-      col_specimen: "Mẫu văn bản"
+      col_specimen: "Loại mẫu"
       col_appearance: "Xuất hiện"
-      col_test: "xét nghiệm"
+      col_test: "Xét nghiệm"
       col_result: "Kết quả"
-      col_site: "Trang"
+      col_site: "Cơ sở"
       col_device_name: "Tên thiết bị"
       col_device_number: "Số seri thiết bị"
       col_sample_id: "Mã mẫu thử"
@@ -276,7 +276,7 @@
       col_start_time: "Thời gian bắt đầu"
       col_end_time: "Thời gian kết thúc"
       col_tuber: "Lao phổi"
-      col_trace: "Dấu vết"
+      col_trace: "Mức độ"
       col_rifampicin: "Rifampicin"
 
     users:
