--- a/cdx_vietnam/config/locales/views/locations.vi.yml
+++ b/cdx_vietnam/config/locales/views/locations.vi.yml
@@ -4,5 +4,5 @@ vi:
       tbl_header: 'Vị trí'
       col_name: 'Tên'
     show:
-      parent: 'Cấp cha:'
+      parent: 'Tuyến trên:'
       admin: 'Cấp quản lý:'
