--- a/cdx_vietnam/config/locales/models/dst_lpa_result.vi.yml
+++ b/cdx_vietnam/config/locales/models/dst_lpa_result.vi.yml
@@ -19,6 +19,6 @@ vi:
         results_other3: 'Kết quả khác'
         results_other4: 'Kết quả khác'
         examined_by: 'Kiểm tra bởi'
-        result_at: 'Kết quả ngày'
+        result_at: 'Ngày trả kết quả'
         sample_identifier_id: 'Mã số mẫu'
         feedback_message_id: 'Phản hồi'
