--- a/cdx_vietnam/config/locales/models/encounters.vi.yml
+++ b/cdx_vietnam/config/locales/models/encounters.vi.yml
@@ -4,11 +4,11 @@ vi:
       encounter: 'Yêu cầu xét nghiệm'
   encounters:
     status:
-      new: 'New'
-      pending: 'Pending'
-      in_progress: 'In progress'
-      completed: 'Completed'
-      approved: 'Approved'
-      site_id: 'Requested by'
-      performing_site_id: 'Request to'
-      user_id: 'Order by user'
+      new: 'Mẫu mới'
+      pending: 'Đang đợi xử lý'
+      in_progress: 'Đang xử lý'
+      completed: 'Hoàn tất'
+      approved: 'Đã phê duyệt'
+      site_id: 'Yêu cầu bởi'
+      performing_site_id: 'Cơ sở thực hiện xét nghiệm'
+      user_id: 'Yêu cầu từ người dùng'
