--- a/cdx_vietnam/config/locales/models/entity_index_updater.vi.yml
+++ b/cdx_vietnam/config/locales/models/entity_index_updater.vi.yml
@@ -1,3 +1,3 @@
 vi:
   entity_index_updater:
-    unsupported: 'Thực thể không được hỗ trợ cho chỉnh sửa:'
+    unsupported: 'Đối tượng không được hỗ trợ để chỉnh sửa:'
