--- a/cdx_vietnam/config/locales/models/episode.vi.yml
+++ b/cdx_vietnam/config/locales/models/episode.vi.yml
@@ -2,12 +2,12 @@ vi:
   activerecord:
     attributes:
       episode:
-        diagnosis: 'Chẩn đoán *'
+        diagnosis: 'Chẩn đoán'
         hiv_status: 'Tình trạng nhiễm HIV'
         initial_history: 'Lịch sử'
         drug_resistance: 'Kháng thuốc'
         outcome: 'Kết quả'
-        anatomical_site_diagnosis: 'Chẩn đoán phân loại bởi trang web giải phẫu'
+        anatomical_site_diagnosis: 'Chẩn đoán phân loại bởi cơ sở giải phẫu'
   models:
     episode:
-      still_open: 'Vẫn mở'
+      still_open: 'Vẫn chưa hoàn tất'
