--- a/cdx_vietnam/config/locales/models/headless_csv_message_parser.vi.yml
+++ b/cdx_vietnam/config/locales/models/headless_csv_message_parser.vi.yml
@@ -1,4 +1,4 @@
 vi:
   models: 
     headless_csv_message_parser:
-      header_lookup: '"Tiêu đề tra cứu không hỗ trợ cho các tin nhắn CSV không có tiêu đề"'
+      header_lookup: '"Tiêu đề tra cứu không hỗ trợ cho các thông báo CSV không có tiêu đề"'
