--- a/cdx_vietnam/config/locales/models/manifest.vi.yml
+++ b/cdx_vietnam/config/locales/models/manifest.vi.yml
@@ -2,10 +2,10 @@ vi:
   activerecord:
     attributes:
       site:
-        parent: 'Trang web cha'
+        parent: 'Cơ sở cấp trên'
         reset_start_date: 'thiết lập ngày bắt đầu chính sách không được thực hiện'
         reset_end_date: 'thiết lập ngày kết thúc chính sách không được thực hiện'
-        must_match: 'phải phù hợp với tổ chức trang web cha'
+        must_match: 'phải phù hợp với cơ sở cấp trên'
   models:
     manifest:
       unsupported_source_data_type: "loại nguồn dữ liệu không được hỗ trợ"
