--- a/cdx_vietnam/config/locales/models/notification.vi.yml
+++ b/cdx_vietnam/config/locales/models/notification.vi.yml
@@ -4,7 +4,7 @@ vi:
       models:
         notification:
           base:
-            sms_or_email: Bạn phải chọn một trong hai tin nhắn SMS hoặc Email làm phương pháp phân phối.
+            sms_or_email: Bạn phải chọn một trong hai tin nhắn SMS hoặc Email làm phương pháp thông báo.
     attributes:
       notification:
         institution_id: Tổ chức
@@ -12,26 +12,26 @@ vi:
         name: Tên
         description: Mô tả
         enabled: Bật
-        patient_identifier: Mã bện nhân
+        patient_identifier: Mã bệnh nhân
         test_identifier: Mã xét nghiệm
-        sample_identifier: mã mẫu thử
+        sample_identifier: Mã mẫu thử
         detection: Nhận diện
         detection_condition: Điều kiện nhận diện
         device_error_code: Mã lỗi thiết bị
         frequency: Tần suất
         email: Email?
-        email_message: Tin nhắn Email
+        email_message: Thông báo Email
         email_limit: Giới hạn Email
         sms: SMS?
         sms_message: Tin nhắn SMS
         sms_limit: Giới hạn SMS
         last_notification_at: Lần thông báo cuối cùng 
-        deleted_at: Ngày xóa
-        created_at: Ngày tạo
-        updated_at: Ngày cập nhật
-        site_ids: Sites
-        device_ids: Những thiết bị
-        user_ids: Những người nhận nội bộ
+        deleted_at: Thời điểm xóa
+        created_at: Thời điểm tạo
+        updated_at: Thời điểm cập nhật
+        site_ids: Cơ sở
+        device_ids: Thiết bị
+        user_ids: Người dùng nội bộ
         role_ids: Vai trò
         recipient_ids: Người nhận đặc biệt
         notification_statuses_names: Những trạng thái xét nghiệm
@@ -45,6 +45,6 @@ vi:
         last_name: Họ
         email: Địa chỉ Email
         telephone: Số điện thoại
-        deleted_at: Ngày xóa
-        created_at: Ngày tạo
-        updated_at: Ngày cập nhật
+        deleted_at: Thời điểm xóa
+        created_at: Thời điểm tạo
+        updated_at: Thời điểm cập nhật
