--- a/cdx_vietnam/config/locales/views/culture_results.vi.yml
+++ b/cdx_vietnam/config/locales/views/culture_results.vi.yml
@@ -1,6 +1,6 @@
 vi:
   culture_results:
-    localised_name: 'Văn hóa'
+    localised_name: 'Nuôi cấy'
     new:
       header: 'Thêm kết quả xét nghiệm nuôi cấy cho: %{patient_name}'
       back: 'Quay lại'
@@ -19,6 +19,6 @@ vi:
       sample_collected_at: 'Mẫu được thu thập ngày'
       media_used: 'Phương tiện sử dụng'
       serial_number: 'Số seri'
-      test_result: 'Kết quả kiểm tra'
+      test_result: 'Kết quả xét nghiệm'
       examined_by: 'Kiểm tra bởi'
-      result_at: 'Kết quả ngày'
+      result_at: 'Ngày trả kết quả'
