--- a/cdx_vietnam/config/locales/views/patient_test_results.vi.yml
+++ b/cdx_vietnam/config/locales/views/patient_test_results.vi.yml
@@ -2,12 +2,12 @@ vi:
   patient_test_results:
     index:
       xpert_result: 'Kết quả Xpert'
-      culture_result: 'Kết quả Culture'
+      culture_result: 'Kết quả nuôi cấy'
       dst_lpa_result: 'Kết quả Dst/Lpa'
-      microscopy_result: 'Kết quả Microscopy'
+      microscopy_result: 'Kết quả soi kính trực tiếp'
     status:
       new: 'Mới'
-      sample_collected: 'Đang chờ'
+      sample_collected: 'Đang chờ xử lý'
       allocated: 'Đã tiếp nhận'
       pending_approval: 'Đang chờ phê duyệt'
       rejected: 'Đã từ chối'
