--- a/cdx_vietnam/config/locales/views/xpert_results.vi.yml
+++ b/cdx_vietnam/config/locales/views/xpert_results.vi.yml
@@ -1,6 +1,6 @@
 vi:
   xpert_results:
-    localised_name: 'Xpert'
+    localised_name: 'Kỹ thuật xét nghiệm Xpert'
     new:
       header: 'Thêm kết quả xét nghiệm Xpert MTB/RIF cho: %{patient_name}'
       details_header: 'Thông tin chi tiết'
@@ -15,4 +15,4 @@ vi:
       audit: 'Kết quả Xpert MTB/RIF đã được cập nhật'
       notice: 'Kết quả Xpert MTB/RIF đã được cập nhật thành công.'
     form:
-      rifampicin_detected: "Không thể chọn Rifampicin là phát hiện trừ khi M. tuberculosis được phát hiện"
+      rifampicin_detected: "Không thể chọn phát hiện Rifampicin trừ khi lao được phát hiện"
