--- a/cdx_vietnam/config/locales/views/notifications.vi.yml
+++ b/cdx_vietnam/config/locales/views/notifications.vi.yml
@@ -31,6 +31,7 @@ vi:
     form:
       legends:
         ad-hoc_recipients: Những người tiếp nhận đặc biệt
+        conditions: Conditions to trigger on?
       placeholder:
         name: Tên
         description: Mô tả
