Refactor dashboard queries to avoid duplicate code.

--- a/cdx_core/config/locales/select.en.yml
+++ b/cdx_core/config/locales/select.en.yml
@@ -85,7 +85,7 @@ en:
         not_detected: 'Not Detected'
         indeterminate: 'Invalid'
         no_result: 'No result'
-        err: 'Error'
+        error: 'Error'
       rifampicin:
         detected: 'Detected'
         not_detected: 'Not Detected'
