--- a/cdx_vietnam/config/locales/views/patients.vi.yml
+++ b/cdx_vietnam/config/locales/views/patients.vi.yml
@@ -4,9 +4,9 @@ vi:
       episode_empty_header: 'Không có lịch sử điều trị'
       episode_empty_text1: 'Tạo một %{href} để bắt đầu lịch sử điều trị.'
       episode_empty_text2: 'Bạn không thể tạo yêu cầu xét nghiệm cho đến khi một %{href} được thêm.'
-      new_episode: 'Tập mới'
-      add_episode: 'Thêm tập'
-      edit_episode: 'Chỉnh sửa tập'
+      new_episode: 'Lần khám mới'
+      add_episode: 'Thêm lần khám'
+      edit_episode: 'Chỉnh sửa lần khám'
       add_test_order: 'Thêm yêu cầu xét nghiệm'
       add_comment: 'Thêm bình luận'
       edit_patient: 'Chỉnh sửa bệnh nhân'
@@ -23,7 +23,7 @@ vi:
       show_all: 'Hiển thị tất cả'
       name: 'Tên'
       patient_id: 'Mã bệnh nhân'
-      last_test_order: 'yêu cầu xét nghiệm cuối cùng'
+      last_test_order: 'yêu cầu xét nghiệm gần nhất trước đây'
       patients: 'Bệnh nhân'
       clear_button:  'Xóa'
       address: 'Địa chỉ'
@@ -80,7 +80,7 @@ vi:
       patient_id: 'Mã bệnh nhân'
       birth_date_on: 'Ngày sinh'
       city: 'Thành phố'
-      last_test_order: 'Yêu cầu xét nghiệm cuối cùng'
+      last_test_order: 'Yêu cầu xét nghiệm gần nhất trước đây'
       patient:
         zero: 'Không bệnh nhân'
         one:  'Một bệnh nhân'
